--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
             <b>Acreditamos que dar nossas mãos é uma oportunidade única.</b>
           </p>
         </div>
-      </section>
+      </section>  
 
       <section id="mid-card" class="important-card mid-card flex flex-col">
         <div class="mid-card">
@@ -133,7 +133,7 @@
 
       <section class="important-card mid-card center-align">
         <div>
-          <h2 id="slogan" class="title2"><br />ISSO É</h2>
+          <h2 class="title2">ISSO É</h2>
         </div>
 
         <div>
