Correção titulo página index

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
     <main>
       <section>
         <div id="info">
-          <h1 class="title">Tech do Bem</h1>
+          <h1 id="title" class="title">Tech do Bem</h1>
           <br />
           <p class="text">
             A Tech do Bem é o apoio tecnológico que faltava para a Turma do Bem.
