Adicionando responsividade (mobile) a pagina de FAQ

--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -79,11 +79,11 @@
 
         <div>
           <details name="FAQ" class="question-card">
-            <summary class="text">
+            <summary>
               Como poderei acessar o sistema e quais dispositivos são
               compatíveis?
             </summary>
-            <p class="text">
+            <p>
               O sistema foi desenvolvido para acesso via navegador web,
               permitindo que você acesse de qualquer dispositivo (computador,
               tablet ou smartphone) a qualquer momento. Basta ter conexão com
@@ -94,11 +94,11 @@
           </details>
 
           <details name="FAQ" class="question-card">
-            <summary class="text">
+            <summary>
               Como o sistema ajudará no acompanhamento de pacientes e no envio
               de comunicados?
             </summary>
-            <p class="text">
+            <p>
               Desenvolvemos uma interface intuitiva que unifica todas as
               informações do paciente, incluindo histórico, próximas consultas,
               exames e cirurgias. Você poderá enviar comunicados diretamente
@@ -109,11 +109,11 @@
           </details>
 
           <details name="FAQ" class="question-card">
-            <summary class="text">
+            <summary>
               Existe suporte disponível para resolver dúvidas burocráticas
               rapidamente?
             </summary>
-            <p class="text">
+            <p>
               Sim! Implementamos um suporte alternativo baseado em Inteligência
               Artificial para agilizar questões burocráticas e solucionar
               dúvidas operacionais rapidamente. Casos mais complexos são
@@ -123,11 +123,11 @@
           </details>
 
           <details name="FAQ" class="question-card">
-            <summary class="text">
+            <summary>
               Como ficará o armazenamento de documentos e dados no novo sistema?
               Haverá risco de perda de informações durante a transição?
             </summary>
-            <p class="text">
+            <p>
               Implementamos uma reestruturação completa do banco de dados com
               foco máximo em segurança e robustez. Todos os documentos e dados
               de pacientes e voluntários serão armazenados de forma centralizada
