--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -143,12 +143,12 @@
       </section>
     </main>
 
-    <footer id="footerFaq" class="footer-info">
+    <footer class="footer-info">
       <section id="nav-footer" class="flex">
-        <div>
+        <div id="logo-footer">
           <a href="./index.html">
             <img
-              id="logo-footer"
+              class="logo-medium"
               src="./assets/logo-tech-do-bem.webp"
               alt="Logo da Tech do Bem, a logo possuí o nome da empresa na cor branca com uma borda rosa, e possuí um detalhe gráfico de um dente."
             />
@@ -156,7 +156,7 @@
         </div>
 
         <div>
-          <nav>
+          <nav class="flex">
             <ul class="flex">
               <li>
                 <a href="./index.html">
@@ -176,6 +176,9 @@
                   Contato
                 </a>
               </li>
+            </ul>
+
+            <ul class="flex">
               <li>
                 <a href="./who.html">
                   <i class="fa-solid fa-people-group"></i>
@@ -189,13 +192,14 @@
                 </a>
               </li>
             </ul>
+            
           </nav>
         </div>
       </section>
 
       <section id="rights" class="flex">
         <div>
-          <p>© 2025 Tech do Bem | Todos os direitos reservados</p>
+          <p>© 2025 Tech do Bem | Todos os direitos reservados</p>
         </div>
 
         <div>
