--- a/frontend/index.html
+++ b/frontend/index.html
@@ -158,10 +158,10 @@
 
     <footer class="footer-info">
       <section id="nav-footer" class="flex">
-        <div>
+        <div id="logo-footer">
           <a href="./index.html">
             <img
-              id="logo-footer"
+              class="logo-medium"
               src="./assets/logo-tech-do-bem.webp"
               alt="Logo da Tech do Bem, a logo possuí o nome da empresa na cor branca com uma borda rosa, e possuí um detalhe gráfico de um dente."
             />
@@ -169,7 +169,7 @@
         </div>
 
         <div>
-          <nav>
+          <nav class="flex">
             <ul class="flex">
               <li>
                 <a href="./index.html">
@@ -189,6 +189,9 @@
                   Contato
                 </a>
               </li>
+            </ul>
+
+            <ul class="flex">
               <li>
                 <a href="./who.html">
                   <i class="fa-solid fa-people-group"></i>
@@ -202,6 +205,7 @@
                 </a>
               </li>
             </ul>
+            
           </nav>
         </div>
       </section>
