--- a/frontend/who.html
+++ b/frontend/who.html
@@ -193,10 +193,10 @@
 
     <footer class="footer-info">
       <section id="nav-footer" class="flex">
-        <div>
+        <div id="logo-footer">
           <a href="./index.html">
             <img
-              id="logo-footer"
+              class="logo-medium"
               src="./assets/logo-tech-do-bem.webp"
               alt="Logo da Tech do Bem, a logo possuí o nome da empresa na cor branca com uma borda rosa, e possuí um detalhe gráfico de um dente."
             />
@@ -204,7 +204,7 @@
         </div>
 
         <div>
-          <nav>
+          <nav class="flex">
             <ul class="flex">
               <li>
                 <a href="./index.html">
@@ -224,6 +224,9 @@
                   Contato
                 </a>
               </li>
+            </ul>
+
+            <ul class="flex">
               <li>
                 <a href="./who.html">
                   <i class="fa-solid fa-people-group"></i>
@@ -237,13 +240,14 @@
                 </a>
               </li>
             </ul>
+            
           </nav>
         </div>
       </section>
 
       <section id="rights" class="flex">
         <div>
-          <p>© 2025 Tech do Bem | Todos os direitos reservados</p>
+          <p>© 2025 Tech do Bem | Todos os direitos reservados</p>
         </div>
 
         <div>
