Ajustes em tamanhos na página e footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,7 +168,7 @@
           </a>
         </div>
 
-        <div>
+        <div id="menu-footer">
           <nav class="flex">
             <ul class="flex">
               <li>
