--- a/frontend/about.html
+++ b/frontend/about.html
@@ -116,7 +116,7 @@
           </a>
         </div>
 
-        <div>
+        <div id="menu-footer">
           <nav class="flex">
             <ul class="flex">
               <li>
@@ -153,7 +153,6 @@
                 </a>
               </li>
             </ul>
-            
           </nav>
         </div>
       </section>
