--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -104,7 +104,7 @@
           </a>
         </div>
 
-        <div>
+        <div id="menu-footer">
           <nav class="flex">
             <ul class="flex">
               <li>
@@ -141,7 +141,6 @@
                 </a>
               </li>
             </ul>
-            
           </nav>
         </div>
       </section>
