--- a/frontend/faq.html
+++ b/frontend/faq.html
@@ -155,7 +155,7 @@
           </a>
         </div>
 
-        <div>
+        <div id="menu-footer">
           <nav class="flex">
             <ul class="flex">
               <li>
@@ -192,7 +192,6 @@
                 </a>
               </li>
             </ul>
-            
           </nav>
         </div>
       </section>
