--- a/frontend/who.html
+++ b/frontend/who.html
@@ -203,7 +203,7 @@
           </a>
         </div>
 
-        <div>
+        <div id="menu-footer">
           <nav class="flex">
             <ul class="flex">
               <li>
@@ -240,7 +240,6 @@
                 </a>
               </li>
             </ul>
-            
           </nav>
         </div>
       </section>
