Adicionando responsividade a página Quem somos

--- a/frontend/who.html
+++ b/frontend/who.html
@@ -71,14 +71,15 @@
     </header>
 
     <main id="colaborator">
-      <section id="Hugo" class="flex">
+      <section id="Hugo" class="flex flex-col">
         <div>
           <img
+            class="colaborator-pic"
             src="./assets/fotoHugo.png"
             alt="Imagem do colaborador Hugo que está com uma camiseta polo preta, cabelo black power e de braços cruzados."
           />
         </div>
-        <div class="infoColaborator flex flex-col">
+        <div class="flex flex-col">
           <h3 class="title3">Hugo Souza de Jesus</h3>
           <p>RM: 568542</p>
           <p>1TDSPR</p>
@@ -112,8 +113,15 @@
         </div>
       </section>
 
-      <section id="lucas-campanha" class="flex">
-        <div class="infoColaborator flex flex-col">
+      <section id="lucas-campanha" class="flex flex-col">
+        <div>
+          <img
+            class="colaborator-pic"
+            src="./assets/FotoLucasCampanhã.png"
+            alt="Foto do colaborador Lucas Campanhã sorrindo, está vestindo uma mochila com alças na cor vermelha e com a torre eiffel de fundo."
+          />
+        </div>
+        <div class="flex flex-col">
           <h3 class="title3">Lucas Campanhã dos Santos</h3>
           <p>RM: 566815</p>
           <p>1TDSPR</p>
@@ -143,23 +151,17 @@
             </a>
           </div>
         </div>
-
-        <div>
-          <img
-            src="./assets/FotoLucasCampanhã.png"
-            alt="Foto do colaborador Lucas Campanhã sorrindo, está vestindo uma mochila com alças na cor vermelha e com a torre eiffel de fundo."
-          />
-        </div>
       </section>
 
-      <section id="Lucas_Pompeu" class="flex">
+      <section id="Lucas_Pompeu" class="flex flex-col">
         <div>
           <img
+            class="colaborator-pic"
             src="./assets/fotoLucasPompeu.png"
             alt="Foto do colaborador Lucas Marcelino sorrindo com as mãos na mesa."
           />
         </div>
-        <div class="infoColaborator flex flex-col">
+        <div class="flex flex-col">
           <h3 class="title3">Lucas Marcelino Pompeu</h3>
           <p>RM: 567010</p>
           <p>1TDSPR</p>
