--- a/frontend/who.html
+++ b/frontend/who.html
@@ -117,7 +117,7 @@
         <div>
           <img
             class="colaborator-pic"
-            src="./assets/FotoLucasCampanhã.png"
+            src="./assets/FotoLucasCampanha.png"
             alt="Foto do colaborador Lucas Campanhã sorrindo, está vestindo uma mochila com alças na cor vermelha e com a torre eiffel de fundo."
           />
         </div>
