Ajustes de tamanho para maior padronização

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,9 @@
 
       <section class="important-card flex flex-col">
         <div>
-          <h2 id="title-first-card" class="title2">O PRIVIÉGIO DE PODER MUDAR VIDAS</h2>
+          <h2 id="title-first-card" class="title2">
+            O PRIVIÉGIO DE PODER MUDAR VIDAS
+          </h2>
         </div>
         <div id="card-text">
           <p>
@@ -100,7 +102,7 @@
             <b>Acreditamos que dar nossas mãos é uma oportunidade única.</b>
           </p>
         </div>
-      </section>  
+      </section>
 
       <section id="mid-card" class="important-card mid-card flex flex-col">
         <div class="mid-card">
@@ -117,7 +119,9 @@
 
       <section class="important-card flex flex-col">
         <div>
-          <h2 id="title-second-card" class="title2">A TECNOLOGIA PARA IMPULSIONAR</h2>
+          <h2 id="title-second-card" class="title2">
+            A TECNOLOGIA PARA IMPULSIONAR
+          </h2>
         </div>
         <div id="card-text">
           <p>
@@ -133,7 +137,7 @@
 
       <section class="important-card mid-card center-align">
         <div>
-          <h2 class="title2">ISSO É</h2>
+          <h2 class="title2 align-right">ISSO É</h2>
         </div>
 
         <div>
@@ -205,7 +209,6 @@
                 </a>
               </li>
             </ul>
-            
           </nav>
         </div>
       </section>
