Primeiro escopo para o botão de interação do menu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,49 @@
           <a target="_blank" href="./login.html">Login</a>
         </button>
       </div>
+
+      <div class="mobile-menu-btn" onclick="openMenu()">
+        <button>
+          <i class="fa-solid fa-bars fa-2xl"></i>
+        </button>
+      </div>
     </header>
+    <div id="mobile-menu">
+      <nav>
+        <ul class="align-right flex flex-col">
+          <li>
+            <a href="./index.html">
+              Home
+              <i class="fa-solid fa-house"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="./about.html">
+              Sobre
+              <i class="fa-solid fa-circle-info"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="./contact.html">
+              Contato
+              <i class="fa-solid fa-phone"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="./who.html">
+              Quem somos
+              <i class="fa-solid fa-people-group"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="./faq.html">
+              FAQ
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <main>
       <section>
@@ -223,5 +265,7 @@
         </div>
       </section>
     </footer>
+
+    <script src="./../js/script.js"></script>
   </body>
 </html>
