--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -269,6 +269,27 @@
               FAQ
             </a>
           </li>
+          <li>
+            <a target="_blank" href="./login.html">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-circle-user-round-icon lucide-circle-user-round"
+              >
+                <path d="M18 20a6 6 0 0 0-12 0" />
+                <circle cx="12" cy="10" r="4" />
+                <circle cx="12" cy="12" r="10" />
+              </svg>
+              Login
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -433,5 +454,7 @@
         </div>
       </section>
     </footer>
+
+    <script src="./../js/script.js"></script>
   </body>
 </html>
