--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
 
     <title>Tech do Bem - Login</title>
   </head>
-  <body>
+  <body id="body-login">
     <main id="login-page">
       <section>
         <div>
