Remoção de página desnecessária

--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 
     <link rel="stylesheet" href="./style/index.css" />
 
-    <title>Contato</title>
+    <title>Sobre nós</title>
   </head>
-  <body id="contact-body" class="flex flex-col">
+  <body>
     <div class="bg-header"></div>
 
     <header class="navigation flex">
@@ -294,26 +294,38 @@
       </nav>
     </div>
 
-    <main id="contact-main">
-      <section id="contact-info">
-        <div>
-          <h3 class="title3">Em caso de dúvidas ou para maiores informações</h3>
-          <br />
-          <h3>Entre em contato nos seguintes canais:</h3>
-        </div>
-        <div>
-          <p class="text"><b>E-mail (Geral):</b> tdb.fiap@gmail.com</p>
-          <p class="text">
-            <b>E-mail (UX, UI & Frontend):</b> tdb.fiap.frontend@gmail.com
-          </p>
-          <p class="text">
-            <b>E-mail (Backend Development):</b> tdb.fiap.backend@gmail.com
-          </p>
-          <p class="text">
-            <b>E-mail (AI & Business):</b> tdb.fiap.business@gmail.com
-          </p>
-        </div>
-      </section>
+    <main>
+      <div id="about">
+        <h1 class="title">Tech do Bem</h1>
+        <p class="text">
+          A Tech do Bem surgiu para otimizar a gestão e o acompanhamento de
+          atendimentos do Turma do Bem. Com foco na organização e eficiência, o
+          sistema oferece ferramentas completas não apenas para a gestão interna
+          das informações da Turma do Bem, mas também para o monitoramento de
+          pacientes e gestão de profissionais voluntários. <br /><br />
+
+          Entre suas principais funcionalidades, estão a adição e manutenção de
+          pacientes, possibilitando o cadastro, atualização e acompanhamento
+          individual de cada pessoa atendida. Também permite a adição e
+          manutenção de dentistas e colaboradores, facilitando o controle das
+          equipes envolvidas e a distribuição das atividades. <br /><br />
+
+          O sistema oferece, ainda, o controle detalhado dos tratamentos
+          realizados, em andamento e a iniciar, permitindo uma visão clara do
+          progresso de cada caso. Além disso, promove a centralização das
+          informações recebidas, garantindo maior segurança, transparência e
+          integração entre os dados. <br /><br />
+
+          Visando o futuro, a Tech do Bem agrega ferramentas baseadas em
+          Inteligência Artificial para otimizar processos lentos e burocráticos,
+          devolvendo o precioso tempo que os colaboradores da Turma do Bem
+          perdem com tais atividades. <br /><br />
+
+          A Tech do Bem foi criado para tornar os processos mais simples e
+          conectados, unindo tecnologia e propósito social para gerar impacto
+          real e transformar vidas.
+        </p>
+      </div>
     </main>
 
     <footer class="footer-info">
@@ -455,6 +467,6 @@
       </section>
     </footer>
 
-    <script src="./../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
