--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,9 @@
 
     <link rel="stylesheet" href="./style/index.css" />
 
-    <title>FAQ</title>
+    <title>Contato</title>
   </head>
-  <body>
+  <body id="contact-body" class="flex flex-col">
     <div class="bg-header"></div>
 
     <header class="navigation flex">
@@ -294,75 +294,24 @@
       </nav>
     </div>
 
-    <main>
-      <section id="questions">
+    <main id="contact-main">
+      <section id="contact-info">
         <div>
-          <h2 class="title3">Perguntas frequentes (FAQ)</h2>
+          <h3 class="title3">Em caso de dúvidas ou para maiores informações</h3>
           <br />
+          <h3>Entre em contato nos seguintes canais:</h3>
         </div>
-
         <div>
-          <details name="FAQ" class="question-card">
-            <summary>
-              Como poderei acessar o sistema e quais dispositivos são
-              compatíveis?
-            </summary>
-            <p>
-              O sistema foi desenvolvido para acesso via navegador web,
-              permitindo que você acesse de qualquer dispositivo (computador,
-              tablet ou smartphone) a qualquer momento. Basta ter conexão com
-              internet para visualizar dados de pacientes, andamento de
-              atendimentos, dentistas relacionados e outras informações de forma
-              intuitiva.
-            </p>
-          </details>
-
-          <details name="FAQ" class="question-card">
-            <summary>
-              Como o sistema ajudará no acompanhamento de pacientes e no envio
-              de comunicados?
-            </summary>
-            <p>
-              Desenvolvemos uma interface intuitiva que unifica todas as
-              informações do paciente, incluindo histórico, próximas consultas,
-              exames e cirurgias. Você poderá enviar comunicados diretamente
-              pelo sistema para pacientes e responsáveis, com datas de exames,
-              informações sobre campanhas e outros avisos importantes, tudo de
-              forma centralizada.
-            </p>
-          </details>
-
-          <details name="FAQ" class="question-card">
-            <summary>
-              Existe suporte disponível para resolver dúvidas burocráticas
-              rapidamente?
-            </summary>
-            <p>
-              Sim! Implementamos um suporte alternativo baseado em Inteligência
-              Artificial para agilizar questões burocráticas e solucionar
-              dúvidas operacionais rapidamente. Casos mais complexos são
-              automaticamente encaminhados para nossa equipe humana, garantindo
-              que todas as demandas recebam a devida atenção sem atrasos.
-            </p>
-          </details>
-
-          <details name="FAQ" class="question-card">
-            <summary>
-              Como ficará o armazenamento de documentos e dados no novo sistema?
-              Haverá risco de perda de informações durante a transição?
-            </summary>
-            <p>
-              Implementamos uma reestruturação completa do banco de dados com
-              foco máximo em segurança e robustez. Todos os documentos e dados
-              de pacientes e voluntários serão armazenados de forma centralizada
-              e protegida. A transição será gradual e supervisionada, mantendo
-              os sistemas atuais funcionando em paralelo durante a migração, o
-              que garante que nenhuma informação se perca. Além disso, os
-              dentistas voluntários terão um canal específico para envio de
-              documentos e dados de forma organizada e vinculada aos respectivos
-              pacientes.
-            </p>
-          </details>
+          <p class="text"><b>E-mail (Geral):</b> tdb.fiap@gmail.com</p>
+          <p class="text">
+            <b>E-mail (UX, UI & Frontend):</b> tdb.fiap.frontend@gmail.com
+          </p>
+          <p class="text">
+            <b>E-mail (Backend Development):</b> tdb.fiap.backend@gmail.com
+          </p>
+          <p class="text">
+            <b>E-mail (AI & Business):</b> tdb.fiap.business@gmail.com
+          </p>
         </div>
       </section>
     </main>
@@ -506,6 +455,6 @@
       </section>
     </footer>
 
-    <script src="./../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
