--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="./style/index.css" />
 
-    <title>Sobre nós</title>
+    <title>FAQ</title>
   </head>
   <body>
     <div class="bg-header"></div>
@@ -295,37 +295,76 @@
     </div>
 
     <main>
-      <div id="about">
-        <h1 class="title">Tech do Bem</h1>
-        <p class="text">
-          A Tech do Bem surgiu para otimizar a gestão e o acompanhamento de
-          atendimentos do Turma do Bem. Com foco na organização e eficiência, o
-          sistema oferece ferramentas completas não apenas para a gestão interna
-          das informações da Turma do Bem, mas também para o monitoramento de
-          pacientes e gestão de profissionais voluntários. <br /><br />
+      <section id="questions">
+        <div>
+          <h2 class="title3">Perguntas frequentes (FAQ)</h2>
+          <br />
+        </div>
 
-          Entre suas principais funcionalidades, estão a adição e manutenção de
-          pacientes, possibilitando o cadastro, atualização e acompanhamento
-          individual de cada pessoa atendida. Também permite a adição e
-          manutenção de dentistas e colaboradores, facilitando o controle das
-          equipes envolvidas e a distribuição das atividades. <br /><br />
+        <div>
+          <details name="FAQ" class="question-card">
+            <summary>
+              Como poderei acessar o sistema e quais dispositivos são
+              compatíveis?
+            </summary>
+            <p>
+              O sistema foi desenvolvido para acesso via navegador web,
+              permitindo que você acesse de qualquer dispositivo (computador,
+              tablet ou smartphone) a qualquer momento. Basta ter conexão com
+              internet para visualizar dados de pacientes, andamento de
+              atendimentos, dentistas relacionados e outras informações de forma
+              intuitiva.
+            </p>
+          </details>
 
-          O sistema oferece, ainda, o controle detalhado dos tratamentos
-          realizados, em andamento e a iniciar, permitindo uma visão clara do
-          progresso de cada caso. Além disso, promove a centralização das
-          informações recebidas, garantindo maior segurança, transparência e
-          integração entre os dados. <br /><br />
+          <details name="FAQ" class="question-card">
+            <summary>
+              Como o sistema ajudará no acompanhamento de pacientes e no envio
+              de comunicados?
+            </summary>
+            <p>
+              Desenvolvemos uma interface intuitiva que unifica todas as
+              informações do paciente, incluindo histórico, próximas consultas,
+              exames e cirurgias. Você poderá enviar comunicados diretamente
+              pelo sistema para pacientes e responsáveis, com datas de exames,
+              informações sobre campanhas e outros avisos importantes, tudo de
+              forma centralizada.
+            </p>
+          </details>
 
-          Visando o futuro, a Tech do Bem agrega ferramentas baseadas em
-          Inteligência Artificial para otimizar processos lentos e burocráticos,
-          devolvendo o precioso tempo que os colaboradores da Turma do Bem
-          perdem com tais atividades. <br /><br />
+          <details name="FAQ" class="question-card">
+            <summary>
+              Existe suporte disponível para resolver dúvidas burocráticas
+              rapidamente?
+            </summary>
+            <p>
+              Sim! Implementamos um suporte alternativo baseado em Inteligência
+              Artificial para agilizar questões burocráticas e solucionar
+              dúvidas operacionais rapidamente. Casos mais complexos são
+              automaticamente encaminhados para nossa equipe humana, garantindo
+              que todas as demandas recebam a devida atenção sem atrasos.
+            </p>
+          </details>
 
-          A Tech do Bem foi criado para tornar os processos mais simples e
-          conectados, unindo tecnologia e propósito social para gerar impacto
-          real e transformar vidas.
-        </p>
-      </div>
+          <details name="FAQ" class="question-card">
+            <summary>
+              Como ficará o armazenamento de documentos e dados no novo sistema?
+              Haverá risco de perda de informações durante a transição?
+            </summary>
+            <p>
+              Implementamos uma reestruturação completa do banco de dados com
+              foco máximo em segurança e robustez. Todos os documentos e dados
+              de pacientes e voluntários serão armazenados de forma centralizada
+              e protegida. A transição será gradual e supervisionada, mantendo
+              os sistemas atuais funcionando em paralelo durante a migração, o
+              que garante que nenhuma informação se perca. Além disso, os
+              dentistas voluntários terão um canal específico para envio de
+              documentos e dados de forma organizada e vinculada aos respectivos
+              pacientes.
+            </p>
+          </details>
+        </div>
+      </section>
     </main>
 
     <footer class="footer-info">
@@ -467,6 +506,6 @@
       </section>
     </footer>
 
-    <script src="./../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
