--- a/index.html
+++ b/index.html
@@ -523,6 +523,6 @@
       </section>
     </footer>
 
-    <script src="./../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
