--- a/who.html
+++ b/who.html
@@ -556,6 +556,6 @@
       </section>
     </footer>
 
-    <script src="./../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
